--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link
       rel="icon"
-      href="https://scontent.fcmb11-1.fna.fbcdn.net/v/t39.30808-6/387116704_274213878913965_6230411355225359284_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=5f2048&_nc_eui2=AeH0jLcnpDTeCWxcYOqQ14OjBYKdQ-bJ0TUFgp1D5snRNVzHbjDpTwmGcm_Tt29A3tvqBKwYK73YkQ6RHt5znrII&_nc_ohc=LriB8SupkM4Q7kNvgE6ZZwG&_nc_zt=23&_nc_ht=scontent.fcmb11-1.fna&oh=00_AYDfvFVmueM4OdbZnEKKXr2hm9qOEcwBlJu40nK00wMHog&oe=666B095F"
+      href="./aryanLogo.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
@@ -12,7 +12,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="./aryanLogo.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
