--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,8 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Rent එකට වාහනයක් ඕනෙද?
+      Aryan Rent a car and tours"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
